--- a/src/app/appointment/appointment.component.css
+++ b/src/app/appointment/appointment.component.css
@@ -1,9 +1,9 @@
-body{
+/* /* body{
   background-image: url(img/360_F_601095582_Vvb6hZzhZpe84yiFJqV5o6O85MkM86dW.jpg);
   background-size: cover;
    background-position: center;
  
-   margin-top: 0; 
+   margin-top: 0;  */
 }
 form {
     max-width: 500px;
@@ -158,4 +158,4 @@ form {
       justify-content: center;
     }
   }
-  
+   */
